<!--
  ~ Copyright (C) 2023 Zokirjon Mamadjonov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Apollo Android</string>
    <string name="zam" translatable="false">zikr.and.mehr</string>

    <!--SignIn-->
    <string name="email_is_required">*Email is required</string>
    <string name="password_is_required">*Password is required</string>
    <string name="loading">Loading</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_su">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!--SignUp-->
    <string name="action_si">Already have an account?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email_helper_text_empty">*Email field can not be empty</string>
    <string name="email_helper_text_wrong">*Email address is not correct</string>
    <string name="password_helper_text_empty">*Password field can not be empty</string>
    <string name="password_helper_text_range">*Password should consist at least %d characters</string>
    <string name="first_name_helper_text_empty">*First name field can not be empty</string>
    <string name="first_name_helper_text_sc">*First name field must contain only letters</string>
    <string name="last_name_helper_text_empty">*Last name field can not be empty</string>
    <string name="last_name_helper_text_sc">*Last name field must contain only letters</string>
    <string name="address_helper_text_empty">*Address field can not be empty</string>
    <string name="address_helper_text_range">*Address should be %1$d to %2$d characters long</string>
    <string name="address_helper_text_sc">*Address field must contain only alphanumeric characters</string>
    <string name="date_helper_text_empty">*Date of birth field can not be empty</string>
    <string name="date_helper_text_sc">*Date of birth is not valid date</string>
    <string name="date_helper_text_current">*Date of birth must be before current date</string>

    <!--PasswordForget-->
    <string name="check_email">Please check your email</string>
    <string name="enter_your_email">Enter your user account\'s email</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="password_reset">Enter your user account\'s email address and we will send you a password reset link.</string>
    <string name="spre">Send password reset email</string>

    <!--Continents-->
    <string name="sign_out">Sign Out</string>
    <string name="pct">%.2f %%</string>
    <string name="hash">#</string>

    <!--Countries-->
    <string name="country_name">Name: %s \nNative name: %s</string>
    <string name="search_country_hint">Search country</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="auto">Auto</string>
    <string name="custom">Custom</string>

</resources>