<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 Zokirjon Mamadjonov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui_layer.signup.SignUpFragment">

    <data>
        <variable
            name="viewModel"
            type="com.zam.apolloandroid.ui_layer.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_single"
            android:layout_marginTop="@dimen/margin_single"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            app:tint="?attr/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:layout_marginEnd="@dimen/margin_double"
            android:fontFamily="@font/muli_bold"
            android:text="@string/zam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_triple"
            android:layout_marginVertical="@dimen/margin_double"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/tv_su">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email_su"
                        style="@style/MyInputTextLayoutStyle"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:layout_marginTop="@dimen/margin_single"
                        android:hint="@string/email"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email_su"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password_su"
                        style="@style/MyInputTextLayoutStyle"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:layout_marginTop="@dimen/margin_double"
                        android:hint="@string/password"
                        app:passwordToggleDrawable="@drawable/ic_eye"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/ic_lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password_su"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="26dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_first_name_su"
                        style="@style/MyInputTextLayoutStyle"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:hint="@string/first_name"
                        app:startIconDrawable="@drawable/ic_edit">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_first_name_su"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_last_name_su"
                        style="@style/MyInputTextLayoutStyle"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:layout_marginTop="@dimen/margin_double"
                        android:hint="@string/last_name"
                        app:startIconDrawable="@drawable/ic_edit">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_last_name_su"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_address_su"
                        style="@style/MyInputTextLayoutStyle"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:layout_marginTop="@dimen/margin_double"
                        android:hint="@string/address"
                        app:startIconDrawable="@drawable/ic_location">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_address_su"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_date_su"
                        style="@style/MyInputTextLayoutStyle"
                        android:layout_marginHorizontal="@dimen/margin_triple"
                        android:layout_marginTop="@dimen/margin_double"
                        android:hint="@string/date_of_birth"
                        app:startIconDrawable="@drawable/ic_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_date_su"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="date"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_triple"
            android:layout_marginBottom="@dimen/margin_double"
            android:onClick="@{ () -> viewModel.signUpNewUsers(etEmailSu.getText().toString(), etPasswordSu.getText().toString(), etFirstNameSu.getText().toString(),etLastNameSu.getText().toString(), etAddressSu.getText().toString(), etDateSu.getText().toString())}"
            android:text="@string/sign_up"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/cv_sign_up"
            app:layout_constraintBottom_toTopOf="@id/tv_si_su_x"/>

        <TextView
            android:id="@+id/tv_si_su_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_triple"
            android:text="@string/action_si"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_si_su"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_si_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_single"
            android:layout_marginBottom="@dimen/margin_triple"
            android:onClick="@{ () -> viewModel.signIn() }"
            android:text="@string/sign_in"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_si_su_x" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>